issue #18: dark mode not showing text

--- a/src/components/VisualOptions.module.css
+++ b/src/components/VisualOptions.module.css
@@ -164,6 +164,7 @@
   line-height: 1.1;
   padding: var(--small-padding);
   padding-top: 0;
+  color: black;
 }
 
 .name {
